# ARVS

./: .gitignore  CITATION.cff  LICENSE  README.md
.github/workflows/: ci.yml  codeql.yml  main.yml
ARVS/arvs/utils/: math_utils.py  timing.py  validation.py
ARVS/audit/: logger.py
ARVS/coordination/: multi_robot.py
ARVS/core/: axioms.py  constants.py  data_types.py  exceptions.py
ARVS/decision/: mvi_logic.py
ARVS/execution/: controller.py
ARVS/fault/: detection.py
ARVS/hardware/: hal.py
ARVS/learning/: adaptive_models.py  experience_db.py
ARVS/optimization/: engine.py
ARVS/perception/: abstraction.py  feature_extractor.py
ARVS/planning/: mdp.py  mission_planner.py
ARVS/risk/: quantification.py
ARVS/safety/: safety_gate.py
ARVS/state/: belief.py  estimation.py
ARVS/system/: arvs_core.py
Docs/: api.md  architecture.md  axioms.md  multi_robot.md  optimization.md  reliability.md
cpp/: CMakeLists.txt  package.xml
cpp/include/: arvs_ros_convert.hpp  arvs_types.hpp  axiom_validator.hpp  execution_controller.hpp  safety_gate.hpp  watchdog_timer.hpp
cpp/ros2/: axiom_validator_node.cpp  execution_controller_node.cpp  safety_gate_node.cpp
cpp/src/: axiom_validator.cpp  execution_controller.cpp  safety_gate.cpp  watchdog_timer.cpp
simulation/: run_simulation.py
simulation/data_loaders/: telemetry_loader.py
simulation/engine/: simulation_engine.py
simulation/outputs/: report.py  report.py.bak
simulation/outputs/forensics/: audit_axiom_violation_cascade__safe_hold_ESA_MEX.json  audit_axiom_violation_cascade__safe_hold_SPICE.json  audit_communication_blackout_ESA_MEX.json  audit_communication_blackout_SPICE.json  audit_fault_injection__torque_spike__sensor_dropout_ESA_MEX.json  audit_fault_injection__torque_spike__sensor_dropout_SPICE.json  audit_normal_operations_ESA_MEX.json  audit_normal_operations_ISS.json  forensic_axiom_violation_cascade___safe_hold_SYNTHETIC_ISS.json  forensic_axiom_violation_cascade___safe_hold_SYNTHETIC_MEX.json  forensic_axiom_violation_cascade___safe_hold_SYNTHETIC_ORBIT.json  forensic_axiom_violation_cascade___safe_hold_SYNTHETIC_REMS.json  forensic_communication_blackout_SYNTHETIC_ISS.json  forensic_communication_blackout_SYNTHETIC_MEX.json  forensic_communication_blackout_SYNTHETIC_ORBIT.json  forensic_communication_blackout_SYNTHETIC_REMS.json  forensic_fault_injection___torque_spike___sensor_dropout_SYNTHETIC_ISS.json  forensic_fault_injection___torque_spike___sensor_dropout_SYNTHETIC_MEX.json  forensic_fault_injection___torque_spike___sensor_dropout_SYNTHETIC_ORBIT.json  forensic_fault_injection___torque_spike___sensor_dropout_SYNTHETIC_REMS.json  forensic_normal_operations_SYNTHETIC_ISS.json  forensic_normal_operations_SYNTHETIC_MEX.json  forensic_normal_operations_SYNTHETIC_ORBIT.json  forensic_normal_operations_SYNTHETIC_REMS.json
simulation/outputs/reports/: ci_report.json  ci_report.txt  telemetry_ESA_MEX.csv  telemetry_ISS.csv  telemetry_REMS.csv  telemetry_SPICE.csv
simulation/scenarios/: scenarios.py
simulation/tests/: run_tests.py  test_arvs_full.py
