<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arvs_cpp</name>
  <version>1.0.0</version>
  <description>
    ARVS C++ core components: Safety Gate, Axiom Validator,
    Watchdog Timer, and Execution Controller.
    ROS2 Humble / Iron compatible.
    Designed for space, rover, and safety-critical deployment.
  </description>

  <maintainer email="chiragrathiresearcher@gmail.com">Chirag Rathi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gtest</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>arvs_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
